# StringProject

./: '  .clang-format  .gitignore  CMakeLists.txt  README.md  buildAndRun.bat  conanProfileDebug  conanfile.py  exec.py  generateProjectFiles.bat  run_tests.bat  stringProject.cppcheck  test.bat
automation/: build.bat  clear.bat  gen.bat  run.bat  runt.bat
conanProfiles/: clangDebug  gccDebug  msvcDebug
src/: CMakeLists.txt  main.cpp
src/String/: CMakeLists.txt  string.h
src/example/: CMakeLists.txt  main.cpp
src/nstring/: CMakeLists.txt  nstring.cpp  nstring.h
src/tests/: CMakeLists.txt  maingt.cpp
src/tests/nstring/: nstring_at_gt.hpp  nstring_clear_gt.hpp  nstring_cmp_ops_gt.hpp  nstring_ctors_gt.hpp  nstring_getters_gt.hpp  nstring_io_ops_gt.hpp  nstring_ops_gt.hpp  nstring_playground_gt.hpp  nstring_plus_ops_gt.hpp  nstring_push_back_gt.hpp  nstring_reserve_gt.hpp  nstring_resize_gt.hpp  nstring_shrink_to_feet_gt.hpp  nstring_swap_gt.hpp
stringProject-cppcheck-build-dir/: files.txt  lastResults.xml  main.a1  main.s1  maingt.a1  maingt.s1  nstring.a1  nstring.s1  statistics.txt
