set(TEST_EXECUTABLE_NAME StrTests)


file(GLOB_RECURSE TEST_EXECUTABLE_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/*.h
${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
)

add_executable(${TEST_EXECUTABLE_NAME} ${TEST_EXECUTABLE_SOURCES})

target_include_directories(${TEST_EXECUTABLE_NAME} PRIVATE  ${CMAKE_CURRENT_SOURCE_DIR}/../nstring)

target_link_libraries(${TEST_EXECUTABLE_NAME} PRIVATE StrLib gtest_main)
